@@ -103,6 +103,7 @@ depth: 1
  * Implement `date_since` in `get_most_popular` inside `search_promotions.models.Query` (TopDevPros)
  * Refactor generic view subclasses to better reuse the generic templates and breadcrumbs (Sage Abdullah)
  * Adopt consistent `classname` (not `classnames`) attributes for all `MenuItem` usage, including deprecation warnings (LB (Ben) Johnston)
+ * Adopt consistent `classname` (not `classnames`) attribute within the `wagtail.images.formats.Format` instance, including deprecation warnings (LB (Ben) Johnston)
  * Deprecate `context` argument of `construct_snippet_listing_buttons` hook (Sage Abdullah)
  * Deprecate legacy moderation system (Sage Abdullah)
 
@@ -398,3 +399,32 @@ def my_view(request):
 The [`construct_snippet_listing_buttons`](construct_snippet_listing_buttons) hook no longer accepts a `context` argument. If you have implemented this hook, you will need to remove the `context` argument from your implementation. If you need to access values computed by the view, you'll need to override the {attr}`~wagtail.snippets.views.snippets.SnippetViewSet.index_view_class` with a custom `IndexView` subclass. The `get_list_buttons` and `get_list_more_buttons` methods in particular may be overridden to customise the buttons on the listing.
 
 Defining a function for this hook that accepts the `context` argument will raise a warning, and the function will receive an empty dictionary (`{}`) as the `context`. Support for defining the `context` argument will be completely removed in a future Wagtail release.
+
+### Adoption of `classname` convention within the Image `Format` instance
+
+When using `wagtail.images.formats.Format`, the created instance set the argument for classes to the attribute `classnames` (plural), this has now changed to `classname` (singular).
+
+For any custom code that accessed or modified this undocumented attribute, updates will need to be made as follows.
+
+Accessing `self.classnames` will still work until a future release, simply returning `self.classname`, but this will raise a deprecation warning.
+
+```python
+# image_formats.py
+from django.utils.html import format_html
+from wagtail.images.formats import Format, register_image_format
+
+
+class CustomImageFormat(Format):
+
+    def image_to_html(self, image, alt_text, extra_attributes=None):
+        # contrived example - pull out the class and render on outside element
+        classname = self.classname # not self.classnames
+        self.classname = "" # not self.classnames
+        inner_html = super().image_to_html(image, alt_text, extra_attributes)
+        return format_html("<custom-image class='{}'>{}</custom-image>", classname, inner_html)
+
+
+custom_format = CustomImageFormat('custom_example', 'Custom example', 'example-image object-fit', 'width-750')
+
+register_image_format(custom_format)
+```
