@@ -1,25 +1,36 @@
+from warnings import warn
+
 from django.utils.html import escape
 from django.utils.translation import gettext_lazy as _
 
 from wagtail.utils.apps import get_app_submodules
+from wagtail.utils.deprecation import RemovedInWagtail60Warning
 
 from .shortcuts import get_rendition_or_not_found
 
 
 class Format:
-    def __init__(self, name, label, classnames, filter_spec):
+    def __init__(self, name, label, classname, filter_spec):
         self.name = name
         self.label = label
-        self.classnames = classnames
+        self.classname = classname
         self.filter_spec = filter_spec
 
     def __str__(self):
         return (
-            f'"{self.name}", "{self.label}", "{self.classnames}", "{self.filter_spec}"'
+            f'"{self.name}", "{self.label}", "{self.classname}", "{self.filter_spec}"'
         )
 
     def __repr__(self):
         return f"Format({self})"
+
+    @property
+    def classnames(self):
+        warn(
+            "The class property `classnames` is deprecated - use `classname` instead.",
+            category=RemovedInWagtail60Warning,
+        )
+        return self.classname
 
     def editor_attributes(self, image, alt_text):
         """
@@ -44,8 +55,8 @@ class Format:
         rendition = get_rendition_or_not_found(image, self.filter_spec)
 
         extra_attributes["alt"] = escape(alt_text)
-        if self.classnames:
-            extra_attributes["class"] = "%s" % escape(self.classnames)
+        if self.classname:
+            extra_attributes["class"] = "%s" % escape(self.classname)
 
         return rendition.img_tag(extra_attributes)
 
